--- a/src/globals/scss/_theme-tokens.scss
+++ b/src/globals/scss/_theme-tokens.scss
@@ -3,6 +3,51 @@
 @import 'functions';
 @import 'colors';
 @import 'spacing';
+
+@mixin darkTheme {
+  //background: #{$color__navy-gray-1} !important;
+  --interactive-01: #{$color__main}; // Main Link and Button Color
+  --interactive-02: #{$color__main-51}; // Main WFP Color //$color__blue-40
+  --hover-primary: #{$color__main-51};
+  --accent-02: #{$color__yellow}; // Darker WFP Blue // $color__teal-20
+  --brand-01: #{$color__main}; // Main Link and Button Color
+  --accent-01: #{$color__yellow};
+  --inverse-01: #{$color__white};
+  --inverse-02: #{$color__white};
+  --inverse-03: #{$color__navy-gray-3};
+  --ui-01: #{$color__gray-90};
+  --ui-02: #{$color__gray-80}; //#{$color__navy-gray-2};
+  --ui-03: #{$color__gray-70}; //#{$color__navy-gray-3};
+  --ui-04: #{$color__gray-60}; //#{$color__navy-gray-4};
+  --ui-05: #{$color__gray-50}; // #{$color__navy-gray-5};
+  --ui-06: #{$color__gray-40}; //#{$color__navy-gray-6};
+  --text-01: #{$color__white};
+  --text-02: #{$color__navy-gray-8};
+  --text-03: #{$color__navy-gray-9};
+  --field-01: #{$color__navy-gray-2};
+  --field-02: #{$color__navy-gray-2};
+  --field-border-01: #{$color__navy-gray-4};
+  --focus-01: #{$color__navy-gray-1};
+  --support-01: #{$color__red};
+  --support-light-01: #{saturate(darken($color__red, 20), 40)}; //#{$color__red-60};
+  --support-02: #{$color__lime-60};
+  --support-light-02: #{saturate(darken($color__lime, 20), 40)};
+  --support-03: #{lighten($color__yellow, 5)};
+  --support-light-03: #{saturate(darken($color__yellow, 15), 40)};
+  --support-04: #{$color__main-30};
+  --support-light-04: #{$color__main-20};
+  --nav-01: #{$color__navy-gray-1};
+  --nav-02: #{$color__main-80};
+  --nav-03: #{$color__magenta-30};
+  --nav-04: #{$color__magenta-60};
+  --disabled: #{$color__navy-gray-10};
+  --disabled-01: #{$color__navy-gray-10};
+  --disabled-02: #{$color__navy-gray-8};
+
+  --modal-background-01: #{$color__transparent-01};
+  --modal-background-02: #{$color__transparent-02};
+}
+
 @mixin css--variables {
   body {
     --interactive-01: #{$color__main-51}; // Main Link and Button Color
@@ -24,7 +69,7 @@
     --ui-06: #{$color__gray-60};
     --text-01: #{$color__main-80};
     --text-02: #{$color__navy-gray-6};
-    --text-03: #{$color__navy-gray-7};
+    --text-03: #{$color__navy-gray-8};
     --field-01: #{$color__white};
     --field-02: #{$color__white}; // Change color
     --field-border-01: #{$color__gray-30};
@@ -89,52 +134,16 @@
     --modal-background-02: #{$color__transparent-02};
   }
 
-  @media (prefers-color-scheme: dark) {
-    body {
-      &.wfp--theme-dark,
-      .wfp--theme-dark {
-        background: #{$color__navy-gray-1} !important;
-        --interactive-01: #{$color__main}; // Main Link and Button Color
-        --interactive-02: #{$color__main-51}; // Main WFP Color //$color__blue-40
-        --hover-primary: #{$color__main-51};
-        --accent-02: #{$color__yellow}; // Darker WFP Blue // $color__teal-20
-        --brand-01: #{$color__main}; // Main Link and Button Color
-        --accent-01: #{$color__yellow};
-        --inverse-01: #{$color__white};
-        --inverse-02: #{$color__white};
-        --inverse-03: #{$color__navy-gray-3};
-        --ui-01: #{$color__gray-90};
-        --ui-02: #{$color__gray-80}; //#{$color__navy-gray-2};
-        --ui-03: #{$color__gray-70}; //#{$color__navy-gray-3};
-        --ui-04: #{$color__gray-60}; //#{$color__navy-gray-4};
-        --ui-05: #{$color__gray-50}; // #{$color__navy-gray-5};
-        --ui-06: #{$color__gray-40}; //#{$color__navy-gray-6};
-        --text-01: #{$color__white};
-        --text-02: #{$color__navy-gray-8};
-        --text-03: #{$color__navy-gray-9};
-        --field-01: #{$color__navy-gray-2};
-        --field-02: #{$color__navy-gray-2};
-        --field-border-01: #{$color__navy-gray-4};
-        --focus-01: #{$color__navy-gray-1};
-        --support-01: #{$color__red};
-        --support-light-01: #{saturate(darken($color__red, 20), 40)}; //#{$color__red-60};
-        --support-02: #{$color__lime-60};
-        --support-light-02: #{saturate(darken($color__lime, 20), 40)};
-        --support-03: #{lighten($color__yellow, 5)};
-        --support-light-03: #{saturate(darken($color__yellow, 15), 40)};
-        --support-04: #{$color__main-30};
-        --support-light-04: #{$color__main-20};
-        --nav-01: #{$color__navy-gray-1};
-        --nav-02: #{$color__main-80};
-        --nav-03: #{$color__magenta-30};
-        --nav-04: #{$color__magenta-60};
-        --disabled: #{$color__navy-gray-10};
-        --disabled-01: #{$color__navy-gray-10};
-        --disabled-02: #{$color__navy-gray-8};
+  .wfp--theme-dark {
+    @include darkTheme();
+    background-color: var(--ui-01) !important;
+  }
+}
 
-        --modal-background-01: #{$color__transparent-01};
-        --modal-background-02: #{$color__transparent-02};
-      }
+@media (prefers-color-scheme: dark) {
+  body {
+    &.wfp--theme-dark--auto {
+      @include darkTheme();
     }
   }
 }
